# algvis

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  app.css  index.html  index.scss  tailwind.config.js  tailwind.scss
src/: app.rs  main.rs
src/components/: mod.rs  navigation.rs  sorting_graph.rs  sorting_graph_canvas.rs  sorting_graph_svg.rs  the_button.rs
src/components/icons/: day_icon.rs  mod.rs  night_icon.rs
src/components/maze_page/: maze_config.rs  maze_legend.rs  maze_view_canvas.rs  mod.rs
src/components/misc/: mod.rs  navigation.rs  theme_toggle.rs
src/components/sorting_page/: mod.rs  sorting_config.rs  sorting_graph_canvas.rs  sorting_graph_svg.rs
src/components/ui/: mod.rs  the_button.rs  the_input.rs  the_select.rs  the_slider.rs
src/helpers/: mod.rs
src/maze_solver_algorithms/: dfs.rs  dijkstra.rs  mod.rs
src/pages/: about.rs  maze.rs  mod.rs  sort.rs
src/router/: mod.rs  router.rs
src/services/: maze_generator.rs  mazer.rs  mod.rs  playable.rs  sorter.rs
src/sorting_algorithms/: bubble_sort.rs  bucket_sort.rs  heap_sort.rs  insertion_sort.rs  merge_sort.rs  mod.rs  quick_sort.rs  radix_sort.rs  shell_sort.rs
vercel/: install.sh
