[package]
name = "algovis"
version = "0.1.0"
edition = "2021"
description = "Yew project with Trunk about algorithms and their visualization"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
yew = { version="0.20", features=["csr"] }
yew-router = "0.17.0"
gloo-timers = "0.3.0"
wasm-bindgen = "0.2.88"
yew-hooks = "0.2.0"

[dependencies.web-sys]
version = "0.3.67"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Window',
  'DomRect', 
]
